Updates after review
Changed layout to use structural tags (section, article), created new CSS file for font definition, added 3rd imported file to homepage.css and blog_post.css, added italic and underlined text to home page.

--- a/blog-post.html
+++ b/blog-post.html
@@ -11,41 +11,43 @@
   </head>
   <body>
   <div class="container">
-    <div class="header">
+    <header>
       <h1><a href="index.html" title="Return to homepage">H<sub>2</sub>O</a></h1><h2>A blog about water</h2>
-    </div>
-    <div class="sidebar box">
+    </header>
+    <nav class="sidebar box">
       <h2>Blog Categories</h2>
-      <div class="sidebar_links">
-            <a href="#">Rain</a>
-            <a href="#">Rivers</a>
-            <a href="#">Sea</a>
-            <a href="#">Waterfalls</a>
-      </div>
-    </div>
+      <ul class="sidebar_links">
+      <li><a href="#">Rain</a></li>
+      <li><a href="#">Rivers</a></li>
+      <li><a href="#">Sea</a></li>
+      <li><a href="#">Waterfalls</a></li>
+      </ul>
+</nav>
     <div class="content box">
-      <div class="title">
+      <section class="title">
         <h1>A single drop of water...</h1>
       <div class="hero_image"></div>
-    </div>
-      <div class="author_info">
-        <div class="profile_txt">
+      </section>
+      <section class="author_info">
+        <article class="profile_txt">
           <h2>About the author</h2>
           <p>John Smith, Marine Biology Phd, New South Wales University</p>
         <p><strong>Bio : </strong>Suspendisse sodales nisi non mi auctor faucibus. Cras fringilla ullamcorper aliquam. Donec non sagittis ipsum, ut gravida nulla. Vestibulum eget felis ex. Proin vitae posuere sapien. Mauris dui mauris, ullamcorper vitae purus non, sodales maximus nunc. Vivamus eu dictum nunc. Etiam tristique lectus eu aliquam tempus.</p>
-        </div>
+        </article>
         <img src='img/bearded-man.jpg' alt="Profile picture"/>
-      </div>
-      <div class="post_content">
+      </section>
+      <section>
+      <article class="post_content">
         <h2>Main content</h2>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi urna felis, mollis tempor justo at, bibendum commodo nibh. Etiam nibh ante, tempus sit amet felis et, dictum sagittis justo. Vivamus urna nunc, semper at magna eget, rutrum lobortis purus. Morbi sit amet tempor arcu. Vivamus in efficitur est. Proin eget lobortis enim, a ultrices orci. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas porttitor ipsum nec metus malesuada suscipit. Curabitur imperdiet arcu vel volutpat blandit. Praesent vitae elit vel nibh semper tempor. Quisque pretium odio vitae velit vehicula, a aliquet purus euismod. Nam id velit lacus. Morbi nec nisl ultrices, maximus libero nec, pretium risus. Suspendisse potenti. Morbi sodales maximus pretium.</p>
           <p>Donec pulvinar ante non facilisis imperdiet. In non ultrices odio, quis accumsan neque. Phasellus a erat semper erat gravida porta. Curabitur imperdiet quam in purus suscipit laoreet. Suspendisse rutrum mauris ut tellus accumsan, consectetur placerat lorem bibendum. Suspendisse iaculis leo et lectus fermentum, vel ultricies quam bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut porta elit sed purus bibendum auctor. Mauris nec interdum nunc. Suspendisse ullamcorper magna mattis elit efficitur consectetur.</p>
           <p>Nunc placerat lobortis felis sit amet feugiat. Donec mauris nisi, molestie ac augue ac, rhoncus molestie metus. Curabitur id turpis enim. Etiam porttitor mauris a commodo auctor. Ut sodales dictum lectus non ornare. Quisque vitae lobortis urna, gravida venenatis tortor. Vivamus mattis venenatis tincidunt. Integer placerat ipsum et turpis scelerisque faucibus. Curabitur fermentum odio vitae fringilla imperdiet. Aliquam pulvinar mauris turpis, at malesuada enim sagittis id. Aliquam congue sapien vitae justo commodo cursus. Vivamus malesuada ac urna sit amet ullamcorper. Cras lacinia ac odio eu ornare.</p>
           <p>Sed a sapien vel tortor tristique posuere ac id enim. Integer maximus, libero quis facilisis lacinia, mi risus semper nibh, sit amet gravida tortor ipsum at dolor. Donec pellentesque ante vitae nulla commodo, nec vulputate lacus interdum. Phasellus velit risus, malesuada sit amet ante nec, commodo fermentum lacus. Etiam tempor tellus pharetra tristique congue. Vivamus eleifend diam in placerat convallis. Cras in scelerisque ex. Quisque condimentum pellentesque quam, sed mattis purus. Quisque blandit lectus in lectus suscipit, vel ultricies eros mattis. Proin in vestibulum mi, eget dapibus leo. Mauris ex est, porta sit amet ligula sit amet, interdum euismod sapien. Curabitur at orci sit amet enim ornare ultricies. Ut quis ligula dignissim, rhoncus diam a, pellentesque velit. Nullam arcu risus, mattis a turpis eu, commodo vestibulum dolor. Nunc nec mauris ornare, scelerisque urna at, fringilla mauris. Donec sed luctus nunc.</p>
           <p>Duis efficitur ligula lorem. Praesent pulvinar feugiat nisl, ut rhoncus ex rutrum a. Morbi aliquet placerat massa nec aliquet. Proin sit amet accumsan augue, ut egestas eros. Sed consectetur ipsum eu efficitur rutrum. Nullam sit amet porttitor ex. Integer mi odio, vestibulum ac lectus id, tempus sodales libero. Nunc egestas nulla libero, at consequat libero semper sit amet. Mauris dapibus et ligula vitae molestie. Morbi tempus augue odio, nec porttitor erat pulvinar ac. Duis tempor velit felis, eget rhoncus leo aliquet sit amet.</p>
-      </div>
+      </article>
+    </section>
     </div>
-    <div class="footer box">
+    <footer class="footer box">
       <div class="social_bar">Share on: <a href="#twitterlink" title="Share on Twitter"><img src="img/iconfinder_twitter_291710.png" alt="Twitter logo"></a>
         <a href="#linkedinlink" title="Share on LinkedIn"><img src="img/iconfinder_linkedin_291709.png" alt="LinkedIn logo"></a>
         <a href="#facebooklink" title="Share on Facebook"><img src="img/iconfinder_facebook_291720.png" alt="Facebook logo"></a></div>
@@ -53,7 +55,7 @@
         <p>Main photo by: <a href="https://unsplash.com/@erdaest?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Erda Estremera</a> on <a href="https://unsplash.com/s/photos/water?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></p>
         <p>Bearded man photo by <a href="https://unsplash.com/@jakobowens1?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jakob Owens</a> on <a href="https://unsplash.com/images/people/attractive?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></p>
       </div>  
-    </div>
+    </footer>
   </div>
   </body>
 </html>
