--- a/index.html
+++ b/index.html
@@ -11,70 +11,72 @@
 
 <body>
     <div class="container">
-        <div class="header box">
+        <header class="header box">
             <h1><a href="index.html" title="Return to homepage">H<sub>2</sub>O</a></h1><h2>A blog about water</h2>
-        </div>
-        <div class="sidebar box">
+        </header>
+        <nav class="box">
             <h2>Blog Categories</h2>
-            <div class="sidebar_links">
-            <a href="#">Rain</a>
-            <a href="#">Rivers</a>
-            <a href="#">Sea</a>
-            <a href="#">Waterfalls</a>
-        </div>
-        </div>
+            <ul class="sidebar_links">
+            <li><a href="#">Rain</a></li>
+            <li><a href="#">Rivers</a></li>
+            <li><a href="#">Sea</a></li>
+            <li><a href="#">Waterfalls</a></li>
+            </ul>
+    </nav>
         <div class="content">
-            <div class="featured">
+            <section class="featured">
+                <article>
                 <h2>Water</h2>
                 <blockquote>
-                    <header>wa·​ter | \ ˈwȯ-tər  , ˈwä-  \</header>
-                    <p>The liquid that descends from the clouds as rain, forms streams, lakes, and seas, and is a major constituent of all living matter and that when pure is an odorless, tasteless, very slightly compressible liquid oxide of hydrogen H2O which appears bluish in thick layers, freezes at 0° C and boils at 100° C, has a maximum density at 4° C and a high specific heat, is feebly ionized to hydrogen and hydroxyl ions, and is a poor conductor of electricity and a good solvent</p>
+                    <header><em>wa·​ter | \ ˈwȯ-tər  , ˈwä-  \</em></header>
+                    <p>The liquid that descends from the clouds as rain, forms streams, lakes, and seas, and is a <u>major constituent</u> of all living matter and that when pure is an odorless, tasteless, very slightly compressible liquid oxide of hydrogen H2O which appears bluish in thick layers, freezes at 0° C and boils at 100° C, has a maximum density at 4° C and a high specific heat, is feebly ionized to hydrogen and hydroxyl ions, and is a poor conductor of electricity and a good solvent</p>
                         <figcaption><cite>Merriam-Webster dictionary</cite></figcaption>
                 </blockquote>
-            </div>
-            <div id="cards_section">
-                <div class="card" id="post1">
+            </article>
+            </section>
+            <section id="cards_section">
+                <article class="card" id="post1">
                     <div class="img_section"></div>
                     <div class="txt_section">
                         <h3><a href="blog-post.html" title="Link to blog post">A single drop of water</a></h3>
                         <a href="blog-post.html" title="Link to blog post">Read more...</a>
                         <p>Photo by: <a href="https://unsplash.com/@erdaest?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Erda Estremera</a> on <a href="https://unsplash.com/s/photos/water?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></p>
                     </div>
-                </div>
-                <div class="card" id="post2">
+                </article>
+                <article class="card" id="post2">
                     <div class="img_section"></div>
                     <div class="txt_section">
                         <h3>A small wave in Italy</h3>
                         <a href="#">Read more...</a>
                         <p>Photo by: <a href="https://unsplash.com/@mougrapher?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Mourad Saadi</a> on <a href="https://unsplash.com/photos/eMX1aIAp9Nw?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></p>
                     </div>
-                </div>
-                <div class="card" id="post3">
+                </article>
+                <article class="card" id="post3">
                     <div class="img_section"></div>
                     <div class="txt_section">
                         <h3>A waterfall in Guadeloupe</h3>
                         <a href="#">Read more...</a>
                         <p>Photo by: <a href="https://unsplash.com/@artic_studios?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Daniel Öberg</a> on <a href="https://unsplash.com/s/photos/waterfall?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                     </div>
-                </div>
-                <div class="card" id="post4">
+                </article>
+                <article class="card" id="post4">
                     <div class="img_section"></div>
                     <div class="txt_section">
                         <h3>The Indian Ocean</h3>
                         <a href="#">Read more...</a>
                         <p>Photo by: <a href="https://unsplash.com/@mr_vero?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Irvan Smith</a> on <a href="https://unsplash.com/s/photos/indian-ocean?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></p>
                     </div>
-                </div>
-            </div>
+                </article>
+            </section>
         </div>
-        <div class="footer box">
+        <footer class="box">
             <div class="social_bar">Share on: <a href="#twitterlink" title="Share on Twitter"><img src="img/iconfinder_twitter_291710.png" alt="Twitter logo"></a>
                 <a href="#linkedinlink" title="Share on LinkedIn"><img src="img/iconfinder_linkedin_291709.png" alt="LinkedIn logo"></a>
                 <a href="#facebooklink" title="Share on Facebook"><img src="img/iconfinder_facebook_291720.png" alt="Facebook logo"></a></div>
                 <div class="credits">
                 <p>Header photo by : <span>by <a href="https://unsplash.com/@turnlip19?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Jong Marshes</a> on <a href="https://unsplash.com/s/photos/water?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span></p>
                 </div>
-        </div>
+        </footer>
     </div>
 </body>
 
